--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
   <title>Project List</title>
+  <link rel="icon" href="./img/favicon.ico">
 
+<!-- +++++++++++++ BOOTSTRAP & CSS +++++"++++++++++++++++++  --> 
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
+  <link rel="stylesheet prefetch" href="style.css">
 </head>
 
 
