--- a/index.html
+++ b/index.html
@@ -3,21 +3,70 @@
 <head>
 	<meta charset="UTF-8">
   <title>Project List</title>
-  <link rel="icon" href="./img/favicon.ico">
+  <link rel="icon" href="assets/img/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- +++++++++++++ BOOTSTRAP & CSS +++++"++++++++++++++++++  --> 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
+
+<!-- +++++++++++++ TODO: ADD GOOGLE ANALYTICS ++++++++++++++++++  --> 
+
+
 
 
 </head>
 
-
-
 <body>
+<div class="container">
+	
+	<h1 class="text-center">Project List</h1>
+	<h3 class="text-center byline">by Joshua Burkholder</h3>
+
+	<div class="col-md-offset-2 col-md-8">
+
+	<p class="text-center">
+	<a class="btn btn-social-icon btn-github" href="https://github.com/joshuaburkholder" target="_blank">
+	  <span class="fa fa-github fa-3x"></span>
+	</a>
+
+	<a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/joshua-burkholder-36948a39" target="_blank">
+	  <span class="fa fa-linkedin fa-3x"></span>
+	</a>
+
+	<a class="btn btn-social-icon btn-id-card" href="https://joshuaburkholder.github.io/" target="_blank">
+	  <span class="fa fa-id-card fa-3x"></span>
+	</a>
+	</p>
+
+  <div id="radioBtn" class="selectTech">
+  	<a class="btn btn-urgent btn-sm active" data-toggle="proj" data-title="featured" id="start">Featured</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="javascript" id="start">javascript</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="jquery" id="start">jquery</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="angularjs" id="start">angularjs</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="reactjs" id="start">reactjs</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="mongodb" id="start">mongodb</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="firebase" id="start">firebase</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="css" id="start">css</a>
+
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="html" id="start">html</a>
+
+	</div>
+
+
+
+</div>
+
 
 </body>
 </html>
