--- a/index.html
+++ b/index.html
@@ -60,13 +60,20 @@
   	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="css" id="start">css</a>
 
   	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="html" id="start">html</a>
-
 	</div>
 
+	<div id="results">
+	<div class="row">
 
+	</div>
+	</div>
+
+	<p class="text-center"><a href="https://joshuaburkholder.github.io/" target="_blank">my portfolio</a></p>
 
 </div>
 
+
+<script src="assets/script.js"></script>
 
 </body>
 </html>
