--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </div>
 
-
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="assets/script.js"></script>
 
 </body>
