debugged script, updated styling

--- a/index.html
+++ b/index.html
@@ -45,35 +45,32 @@
   <div id="radioBtn" class="selectTech">
   	<a class="btn btn-urgent btn-sm active" data-toggle="proj" data-title="featured" id="start">Featured</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="javascript" id="start">javascript</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="javascript">javascript</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="jquery" id="start">jquery</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="jquery">jquery</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="angularjs" id="start">angularjs</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="angularjs">angularjs</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="reactjs" id="start">reactjs</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="reactjs">reactjs</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="mongodb" id="start">mongodb</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="mongodb">mongodb</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="firebase" id="start">firebase</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="firebase">firebase</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="css" id="start">css</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="css">css</a>
 
-  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="html" id="start">html</a>
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="html">html</a>
 	</div>
 
-	<div id="results">
-	<div class="row">
-
-	</div>
-	</div>
+	<div id="results"></div>
 
 	<p class="text-center"><a href="https://joshuaburkholder.github.io/" target="_blank">my portfolio</a></p>
 
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="./assets/projects.js"></script>
+<script src="./assets/script.js"></script>
 
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="assets/script.js"></script>
 
 </body>
 </html>
