--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 <div class="container">
 	
-	<h1 class="text-center">Project List</h1>
-	<h3 class="text-center byline">by Joshua Burkholder</h3>
+	<h1 class="text-center title">Project List</h1>
+	<h4 class="text-center byline">by Joshua Burkholder</h4>
 
 	<div class="col-md-offset-2 col-md-8">
 
