--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <title>Project List</title>
-  <link rel="icon" href="assets/img/favicon.ico">
+  <link rel="icon" href="./assets/img/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- +++++++++++++ BOOTSTRAP & CSS +++++"++++++++++++++++++  --> 
@@ -57,12 +57,14 @@
 
   	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="firebase">firebase</a>
 
+  	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="node">node</a>
+
   	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="css">css</a>
 
   	<a class="btn btn-urgent btn-sm notActive" data-toggle="proj" data-title="html">html</a>
 	</div>
 
-	<div id="results"></div>
+	<div id="results">
 
 	<p class="text-center"><a href="https://joshuaburkholder.github.io/" target="_blank">my portfolio</a></p>
 
